feat: counting how many products have each supplier or category in each res. Respective tests added and edited